[package]
name = "font-mud"
version = "0.1.0"
edition = "2021"
description = "A library for dynamically generating and packing MSDFs of text glyphs."
license = "Apache-2.0"
repository = "https://git.disroot.org/hearth/font-mud"

[dependencies]
glam = "0.20"
ttf-parser = "0.19.2"
rect_packer = "0.2.1"

[dependencies.msdfgen]
git = "https://github.com/katyo/msdfgen-rs"
branch = "master"
default-features = false
features = ["ttf-parser", "png"]

[dev-dependencies]
png = "0.17"
